use try catch and add assertions